--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.eci.pdsw.samples</groupId>
-    <artifactId>PDSW-2018-1-par2t</artifactId>
+	<groupId>edu.eci.pdsw</groupId>
+	<artifactId>parcial-2</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>PDSW-2018-1-par2t</name>
+	<name>Parcial 2</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
