--- a/pom.xml
+++ b/pom.xml
@@ -92,10 +92,12 @@
             <version>1.4.191</version>
         </dependency>
 
-
-
-
-
+        <dependency>
+            <groupId>org.quicktheories</groupId>
+            <artifactId>quicktheories</artifactId>
+            <version>0.25</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     
