--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,17 @@
                     </execution>
                 </executions>
             </plugin>
-
+            
+			<plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>8080</port>
+                    <uriEncoding>UTF-8</uriEncoding>
+                    <path>/</path>
+                </configuration>
+            </plugin>
             
             
             <plugin>
